@@ -9,8 +9,8 @@ RM = rm -f
 
 # man pages are not considered to be sources, so need to add "dist_"
 # prefix to ensure they are added to the distribution.
-dist_man_MANS = sox.1 soxeffect.7 soxformat.7 soxexam.7 libsox.3
-EXTRA_DIST = sox.txt soxeffect.txt soxformat.txt soxexam.txt libsox.txt CMakeLists.txt
+dist_man_MANS = sox.1 soxi.1 soxeffect.7 soxformat.7 soxexam.7 libsox.3
+EXTRA_DIST = sox.txt soxi.txt soxeffect.txt soxformat.txt soxexam.txt libsox.txt CMakeLists.txt
 
 play.1 rec.1: sox.1
 	$(RM) $@ && $(LN_S) $< $@
@@ -19,13 +19,13 @@ play.1 rec.1: sox.1
 .1.txt .3.txt .7.txt:
 	tbl $(srcdir)/$< | nroff -man | col -b > $@
 
-txt: sox.txt soxeffect.txt soxformat.txt soxexam.txt libsox.txt
+txt: sox.txt soxi.txt soxeffect.txt soxformat.txt soxexam.txt libsox.txt
 
 # Rule for making PDF man pages
 .1.pdf .3.pdf .7.pdf:
 	tbl $(srcdir)/$< | groff -man -Tps | ps2pdf - $@
 
-pdf: sox.pdf soxeffect.pdf soxformat.pdf soxexam.pdf libsox.pdf
+pdf: sox.pdf soxi.pdf soxeffect.pdf soxformat.pdf soxexam.pdf libsox.pdf
 
 install-data-hook:
 	cd $(DESTDIR)$(mandir)/man1 && $(RM) play.1 && $(LN_S) sox.1 play.1
