@@ -384,6 +384,7 @@ There are further practical examples of scripting with SoX available to
 download from the SoX web-site [1].
 .SH SEE ALSO
 .BR sox (1),
+.BR soxi (1),
 .BR libsox (3)
 .SS References
 .TP
