@@ -588,6 +588,7 @@ difficult.
 Fasttracker 2 Extended Instrument format.
 .SH SEE ALSO
 .BR sox (1),
+.BR soxi (1),
 .BR soxeffect (7),
 .BR libsox (3),
 .BR octave (1),
