@@ -1,0 +1,96 @@
+'\" t
+'\" The line above instructs most `man' programs to invoke tbl
+'\"
+'\" Separate paragraphs; not the same as PP which resets indent level.
+.de SP
+.if t .sp .5
+.if n .sp
+..
+'\"
+'\" Replacement em-dash for nroff (default is too short).
+.ie n .ds m " - 
+.el .ds m \(em
+'\"
+'\" Placeholder macro for if longer nroff arrow is needed.
+.ds RA \(->
+'\"
+'\" Decimal point set slightly raised
+.if t .ds d \v'-.15m'.\v'+.15m'
+.if n .ds d .
+'\"
+'\" Enclosure macro for examples
+.de EX
+.SP
+.nf
+.ft CW
+..
+.de EE
+.ft R
+.SP
+.fi
+..
+.TH SoX 1 "February 9, 2008" "soxi" "Sound eXchange"
+.SH NAME
+SoX \- Sound eXchange, the Swiss Army knife of audio manipulation
+.SH SYNOPSIS
+\fBsoxi\fR [\fB\-r\fR\^|\^\fB\-c\fR\^|\^\fB\-s\fR\^|\^\fB\-d\fR\^|\^\fB\-b\fR\^|\^\fB\-e\fR\^|\^\fB\-a\fR] \fIinfile1\fR ...
+.SH DESCRIPTION
+Displays information from the header of a given audio file or files.
+Supported audio file types are listed and described in
+.BR soxformat (7).
+Note however, that
+.B soxi
+is intended for use only with audio files with a self-describing header.
+.SP
+By default, as much information as is available is shown.
+The options below may be used to select a single piece of information to show.
+.SH OPTIONS
+.TP
+\fB\-r\fR
+Show sample-rate.
+.TP
+\fB\-c\fR
+Show number of channels.
+.TP
+\fB\-s\fR
+Show number of samples (0 if unavailable).
+.TP
+\fB\-d\fR
+Show duration in minutes and seconds (0 if unavailable).
+Equivalent to number of samples divided by the sample-rate.
+.TP
+\fB\-b\fR
+Show number of bits per sample.
+.TP
+\fB\-e\fR
+Show the name of the audio encoding.
+.TP
+\fB\-a\fR
+Show file comments (annotations) if available.
+.SH BUGS
+Please report any bugs found in this version of SoX to the mailing list
+(sox-users@lists.sourceforge.net).
+.SH SEE ALSO
+.BR sox (1),
+.BR soxformat (7),
+.BR soxeffect (7),
+.BR soxexam (7),
+.BR libsox (3)
+.SP
+The SoX web site at http://sox.sourceforge.net
+.SH LICENSE
+Copyright 2008 by Chris Bagwell and SoX Contributors.
+.SP
+This program is free software; you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation; either version 2, or (at your option)
+any later version.
+.SP
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+.SH AUTHORS
+Chris Bagwell (cbagwell@users.sourceforge.net).
+Other authors and contributors are listed in the AUTHORS file that
+is distributed with the source code.
