@@ -56,6 +56,7 @@ find_program(LN ln)
 if (LN)
   add_custom_target(rec ALL ${LN} -sf sox rec DEPENDS sox)
   add_custom_target(play ALL ${LN} -sf sox play DEPENDS sox)
+  add_custom_target(soxi ALL ${LN} -sf sox soxi DEPENDS sox)
 endif (LN)
 find_program(CTAGS NAMES exuberant-ctags ctags)
 add_custom_target(tags ${CTAGS} --recurse --extra=fq ${CMAKE_CURRENT_SOURCE_DIR})
