@@ -19,6 +19,7 @@ Effects:
 Other new features:
 
   o Command line support for multiple file comments.  (robs)
+  o Added soxi utility to extract/display file header fields.  (robs)
 
 Bug fixes:
 
